--- a/desafio01/estilo.css
+++ b/desafio01/estilo.css
@@ -1,7 +1,13 @@
-body {
-    font-size: large;
+*{
     background-color: black;
     color: white;
-    text-align: center;
-    justify-content: center
+}
+input{
+    background-color:rgb(56, 56, 56);
+    color: rgba(255, 255, 255, 0.486);
+    width: 80px;
+    height: 30px; 
+}
+h1{
+    text-align:center;
 }
