--- a/desafio02/estilo.css
+++ b/desafio02/estilo.css
@@ -1,13 +1,25 @@
-*{
+body {
+    text-align: center;
+    background-color: bisque;
+    color: black;
+}
+
+input {
+    width: 150px;
+    height: 40px;
     background-color: black;
     color: white;
+    border-radius: 50px;
 }
-input{
-    background-color:rgb(56, 56, 56);
-    color: rgba(255, 255, 255, 0.486);
-    width: 80px;
-    height: 30px; 
+
+section {
+    background-color: white;
+    border-radius: 10px;
+    padding: 5px;
+    width: 500px;
+    margin: auto;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.363);
 }
 h1{
-    text-align:center;
+    font-size: xx-large;
 }
