mudei alguns programas

--- a/desafio13/estilo.css
+++ b/desafio13/estilo.css
@@ -28,3 +28,12 @@ section {
     margin: auto;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.363);
 }
+.g{
+    color: green;
+}
+.y{
+    color: yellow;
+}
+.r{
+    color: red;
+}
